--- a/pom.xml
+++ b/pom.xml
@@ -74,10 +74,10 @@
 						<publish>true</publish>
 					</image>
 					<docker>
-						<publishRegistry>
+						<publishRegistery>
 							<username>{env.DOCKERHUB_USER}</username>
 							<password>{env.DOCKERHUB_PWD}</password>
-					<publishRegistry>
+						</publishRegistery>
 					</docker>
 				</configuration>
 			</plugin>
