Fix XML structure in pom.xml for Docker registry

--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
 						<publishRegistry>
 							<username>{env.DOCKERHUB_USER}</username>
 							<password>{env.DOCKERHUB_PWD}</password>
-					<publishRegistry>
+						</publishRegistry>
 					</docker>
 				</configuration>
 			</plugin>
