--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,13 +1,4 @@
-
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java CI with Maven
+name: Build and Push Movie Service
 
 on:
   push:
@@ -16,24 +7,85 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build & Push docker image
-      env: 
-         DOCKERHUB_USER: ${{secrets.DOCKERHUB_USER}}
-         DOCKERHUB_PWD: ${{secrets.DOCKERHUB_PWD}}
-      run: mvn -B spring-boot:build-image -DskipTests
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    # - name: Update dependency graph
-    #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Build with Maven
+      run: mvn clean install -DskipTests
+
+    - name: Run Tests
+      run: mvn test
+      continue-on-error: true
+
+    - name: Upload JAR artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: movie-service-jar
+        path: target/*.jar
+        retention-days: 7
+
+  docker-build-and-push:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+
+    - name: Build JAR with Maven
+      run: mvn clean package -DskipTests
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USER }}
+        password: ${{ secrets.DOCKERHUB_PWD }}
+
+    - name: Extract version
+      id: version
+      run: |
+        VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
+        echo "short_sha=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
+
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: |
+          ${{ secrets.DOCKERHUB_USER }}/movie-service:latest
+          ${{ secrets.DOCKERHUB_USER }}/movie-service:${{ steps.version.outputs.version }}
+          ${{ secrets.DOCKERHUB_USER }}/movie-service:${{ steps.version.outputs.short_sha }}
+        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USER }}/movie-service:latest
+        cache-to: type=inline
+
+    - name: Verify Image Push
+      run: |
+        echo "✅ Docker image pushed successfully!"
+        echo "Image: ${{ secrets.DOCKERHUB_USER }}/movie-service:latest"
+        echo "Version: ${{ steps.version.outputs.version }}"
+        echo "SHA: ${{ steps.version.outputs.short_sha }}"
