--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Build and Push Movie Service
+name: Java CI with Maven
 
 on:
   push:
@@ -7,85 +7,20 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-test:
+  build:
+
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
+    - uses: actions/checkout@v4
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-
-    - name: Build with Maven
-      run: mvn clean install -DskipTests
-
-    - name: Run Tests
-      run: mvn test
-      continue-on-error: true
-
-    - name: Upload JAR artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: movie-service-jar
-        path: target/*.jar
-        retention-days: 7
-
-  docker-build-and-push:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-
-    - name: Build JAR with Maven
-      run: mvn clean package -DskipTests
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USER }}
-        password: ${{ secrets.DOCKERHUB_PWD }}
-
-    - name: Extract version
-      id: version
-      run: |
-        VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
-        echo "short_sha=$(echo ${{ github.sha }} | cut -c1-7)" >> $GITHUB_OUTPUT
-
-    - name: Build and Push Docker Image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: |
-          ${{ secrets.DOCKERHUB_USER }}/movie-service:latest
-          ${{ secrets.DOCKERHUB_USER }}/movie-service:${{ steps.version.outputs.version }}
-          ${{ secrets.DOCKERHUB_USER }}/movie-service:${{ steps.version.outputs.short_sha }}
-        cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USER }}/movie-service:latest
-        cache-to: type=inline
-
-    - name: Verify Image Push
-      run: |
-        echo "✅ Docker image pushed successfully!"
-        echo "Image: ${{ secrets.DOCKERHUB_USER }}/movie-service:latest"
-        echo "Version: ${{ steps.version.outputs.version }}"
-        echo "SHA: ${{ steps.version.outputs.short_sha }}"
+    - name: Build & Push docker image
+      env: 
+         DOCKERHUB_USER: ${{secrets.DOCKERHUB_USER}}
+         DOCKERHUB_PWD: ${{secrets.DOCKERHUB_PWD}}
+      run: mvn -B spring-boot:build-image -DskipTests
